--- a/SubtitleBulkRenamer/SubtitleBulkRenamer.csproj
+++ b/SubtitleBulkRenamer/SubtitleBulkRenamer.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpisodeNoSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EpisodeNoSelectionForm.Designer.cs">
+      <DependentUpon>EpisodeNoSelectionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EpisodeNoSelectionForm.resx">
+      <DependentUpon>EpisodeNoSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
